k8s/homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: homepage
  labels:
    app.kubernetes.io/name: homepage
  annotations:
    gethomepage.dev/description: Dynamically Detected Homepage
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Cluster Management
    gethomepage.dev/icon: homepage.png
    gethomepage.dev/name: Homepage
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - dashboard.local.koryalbert.net
    secretName: koryalbert-tls
  rules:
  - host: "dashboard.local.koryalbert.net"
    http:
      paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: homepage
              port:
                number: 3000
